<resources>
    <string name="app_name">SoftPOS</string>
    <string name="_0_00">0.00</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="cancel">cancel</string>
    <string name="back">back</string>
    <string name="enter">enter</string>
    <string name="ok">Ok</string>
    <string name="reference_id">Reference Id</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="amount">Amount</string>
    <string name="kr">Kr.</string>
    <string name="store_name">Store Name</string>
    <string name="postalcode">PostalCode</string>
    <string name="address">Address</string>
    <string name="back_to_app">Back to App</string>
    <string name="progressing">Progressing</string>

</resources>