<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="confirmationViewModel"
            type="io.softpay.softpos.ui.confirmation.ConfirmationViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20dp"
        android:background="@color/md_blue_A50">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_confirmationFragment_horizontal2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_confirmationFragment_horizontal5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/imageView_confirmationFragment_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_success"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_confirmationFragment_horizontal2" />

        <TextView
            android:id="@+id/textView_confirmationFragment_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"
            android:gravity="center"
            android:text="@{confirmationViewModel.mState}"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_confirmationFragment_status" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_confirmationFragment_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="@dimen/_20dp"
            android:elevation="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_2dp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_confirmationFragment_horizontal5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_confirmationFragment_vertical5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/textView_confirmationFragment_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:text="@string/time"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline_confirmationFragment_vertical5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView_confirmationFragment_timeInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:text="@{confirmationViewModel.mTime}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline_confirmationFragment_vertical5"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView_confirmationFragment_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline_confirmationFragment_vertical5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_confirmationFragment_time"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView_confirmationFragment_dateInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:text="@{confirmationViewModel.mDate}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline_confirmationFragment_vertical5"
                    app:layout_constraintTop_toBottomOf="@+id/textView_confirmationFragment_timeInfo"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView_confirmationFragment_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline_confirmationFragment_vertical5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_confirmationFragment_date"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView_confirmationFragment_amountInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:text="@{confirmationViewModel.mAmount}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline_confirmationFragment_vertical5"
                    app:layout_constraintTop_toBottomOf="@+id/textView_confirmationFragment_dateInfo"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView_confirmationFragment_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:text="@string/store_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline_confirmationFragment_vertical5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_confirmationFragment_amount"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView_confirmationFragment_nameInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:text="@{confirmationViewModel.mStoreName}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline_confirmationFragment_vertical5"
                    app:layout_constraintTop_toBottomOf="@+id/textView_confirmationFragment_amountInfo"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView_confirmationFragment_postalCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:text="@string/postalcode"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline_confirmationFragment_vertical5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_confirmationFragment_name"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView_confirmationFragment_postalCodeInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:text="@{confirmationViewModel.mPostalCode}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline_confirmationFragment_vertical5"
                    app:layout_constraintTop_toBottomOf="@+id/textView_confirmationFragment_nameInfo"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView_confirmationFragment_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline_confirmationFragment_vertical5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_confirmationFragment_postalCode"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/textView_confirmationFragment_addressInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:text="@{confirmationViewModel.mAddress}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/guideline_confirmationFragment_vertical5"
                    app:layout_constraintTop_toBottomOf="@+id/textView_confirmationFragment_postalCodeInfo"
                    tools:ignore="RtlHardcoded" />
                <Button
                    android:id="@+id/imageButton_confirmationFragment_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_blue_round"
                    android:onClick="@{() -> confirmationViewModel.buttonConfirmClicked()}"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20sp"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>